# Data_Visualization

./: .gitignore  Dockerfile  README.md  compose.yml  requirements.txt  setup.cfg
src/Core/: CustomComponents.py  data_cleaner.py  data_provider.py  helper.py  main.py  styles.py
src/Core/data/: agencies.csv  counties-population-2014-2022.csv  states-population.csv
src/Core/data_cleaning/: clean_counties.py  data_cleaner.py
src/Core/data_cleaning/population_raw_data/: cleaned-county-pop.csv  county-pop-2019.csv  county-pop-2022.csv
src/Core/pages/: environments.py  event_type_graph.py  home.py  second_page.py  time_of_day.py  where_accidents.py  year_change.py
src/Core/population-scripts/: clean-counties.py
