[metadata]
name = DataVizzer
description = A Dash project for visualizing a dataset. Created for the Data Visualization course at SDU
author = Thor Malmby Jørgin
platforms = win32, unix, linux
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    Core
install_requires =
    plotly==5.18.0
    dash==2.14.0
    pandas==2.1.1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no